2007-05-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_rc_style_parse),
	(clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_slider), (clearlooks_style_init_from_rc),
	(clearlooks_style_copy):
	* engines/clearlooks/src/clearlooks_style.h:
	Add an option, colorize_scrollbar, for use bg[SELECTED] to 
	colorize the slider

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Add colorize_scrollbar = FALSE to the gtkrc

2007-05-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Colorized nautilus-extra-widget using symbolic colors
	
2007-05-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_toolbar):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_toolbar):
	No highlight on toolbars without widgets upon

2007-05-30  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_toolbar):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_toolbar):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_handle), (clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	* engines/clearlooks/src/support.c:
	(clearlooks_set_toolbar_parameters):
	* engines/clearlooks/src/support.h:
	Added a parameter for the toolbar drawing and detection whether
	there is any other widget on top of it in the window.

	* test/torturetest.c: (widget_type_get_type), (create_testwidgets),
	(main):
	Add a toolbar to the tested widgets. Hopefully testing the new code
	to some extend.
